--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
+        "laravolt/avatar": "^4.1",
         "owen-oj/laravel-getid3": "^2.1",
         "vimeo/vimeo-api": "^3.0"
     },
